# Structure-aware-mesh-decimation

./: CMakeLists.txt  README.md  halfEdge.h  main.cpp  objParser.cpp  objParser.h  structurePreserve.cpp  structurePreserve.h
